--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # change leader key to ctrl \
 unbind C-b
-set -g prefix C-\\
+set -g prefix 'C-\'
 set -g history-limit 100000
 set -g base-index 1
 set-window-option -g pane-base-index 1
