--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g history-limit 100000
 set -g base-index 1
 set-window-option -g pane-base-index 1
 set-window-option -g mode-keys vi
+set-option -g repeat-time 0
 
 unbind +
 bind + \
