--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,9 @@ bind - \
   last-window \;\
   swap-pane -s tmux-zoom.1 \;\
   kill-window -t tmux-zoom
+
+unbind p
+bind p paste-buffer
+
+unbind o
+bind o copy-mode
