--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 # change leader key to ctrl \
+
 unbind C-b
 set -g prefix 'C-\'
 set -g history-limit 100000
@@ -6,6 +7,8 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 set-window-option -g mode-keys vi
 set-option -g repeat-time 0
+
+set -g default-terminal "tmux-256color"
 
 unbind +
 bind + \
